--- a/nested_stacks/labeling_job/template.yaml
+++ b/nested_stacks/labeling_job/template.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: "AWS::Serverless-2016-10-31"
-Description: '[Social Media Dashboard] Annotation Stack'
+Description: '[Social Media Dashboard] Labeling Job Stack'
 
 Parameters:
 
